# nekobox

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/nekobox/: __init__.py  __main__.py  consts.py  info.py  log.py  main.py  msgid.py  provider.py  service.py  transformer.py  uid.py  utils.py
src/nekobox/apis/: __init__.py  handler.py  types.py  utils.py
src/nekobox/events/: __init__.py  handler.py  utils.py
