[project]
name = "nekobox"
version = "0.1.3"
description = "A Satori backend powered by lagrange-python"
authors = [
    {name = "wyapx", email = "admin@nullcat.cn"},
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"}
]
dependencies = [
    "satori-python-server>=0.13.3",
    "lagrange-python>=0.1.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL"}

[project.optional-dependencies]
audio = ["pysilk-mod"]

[project.scripts]
nekobox = "nekobox.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format = {composite = ["isort .", "black ."]}

[tool.pdm.dev-dependencies]
dev = [
    "satori-python>=0.13.2",
    "pysilk-mod",
    "isort>=5.13.2",
    "black>=24.4.2",
    "lagrange-python @ git+https://github.com/LagrangeDev/lagrange-python@broken",
]

[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]
